@@ -1,0 +1,4 @@
+# Set this property to the ImageMagick convert binary. This property has to be
+# set to the binary's absolute path on Windows systems, and defaults to
+# "convert" otherwise.
+com.exedio.cope.media.convertcommand=
