@@ -7,6 +7,9 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* Resizing with ImageMagick works on Windows. 
+	On Windows, install ImageMagick, and set the system properties com.exedio.cope.media.imagemagick (to "true") and 
+	com.exedio.cope.media.convertcommand (to the absolute path of the convert binary).
 * bugfix: Model failed on second connect, if there was a IntegerField.defaultToNext
 * add MediaPath.Locator
 * allow optional EnumField on Enum with one value only
